<resources>
    <string name="app_name">Medicare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Medicare</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_doctor">Doctor</string>
    <string name="menu_ambulance">Ambulance</string>
    <string name="menu_department">Department</string>
    <string name="menu_blood">Blood</string>
    <string name="menu_booking">Booking</string>
    <string name="menu_book_show">Booking Show</string>
</resources>
