<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_doctor"
            android:icon="@drawable/doctor"
            android:title="@string/menu_doctor" />
        <item
            android:id="@+id/nav_department"
            android:icon="@drawable/department"
            android:title="@string/menu_department" />

    </group>

    <item android:title="Services">
        <menu>
            <item
                android:id="@+id/nav_blood"
                android:icon="@drawable/blood"
                android:title="@string/menu_blood" />
            <item
                android:id="@+id/nav_booking"
                android:icon="@drawable/register"
                android:title="@string/menu_booking" />
            <item
                android:id="@+id/nav_ambulance"
                android:icon="@drawable/ambulance"
                android:title="@string/menu_ambulance" />
        </menu>
    </item>

</menu>
